#workspace = { members = [ "src/"] }
[package]
name = "radeblockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.200"
serde_json = "1.0.116"
hex = "0.4.3"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.25"


